--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,6 @@
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
 # Commonly used screens these days easily fit more than 80 characters.
 Metrics/LineLength:
   Max: 120
@@ -17,3 +20,5 @@ Metrics/ClassLength:
 # are needed.
 Style/StringLiterals:
   EnforcedStyle: double_quotes
+
+
